_source/css/logz-docs.css
/* ... */
footer {
  /* flex */
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: space-between;
  align-items: center;

  /* position & style */
  width: auto;
  margin: 0 auto;
  font-size: .8rem;
  border-top: 1px solid #dddddd;
  padding: 10px 50px;
  height: 30px;
  line-height: 30px;
}

div.toc-container {
  grid-area: toc;
  align-self: stretch;
  background-color: #fafafa;
  padding-left: 1rem;
}

div.full-width {
  grid-column: 1 / -1 !important;
}

div.body-container {
  max-width: 800px;
}

div.card-container {
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
}

div.body-container, div.card-container {
  vertical-align: top;
  padding-bottom: 200px;
  margin-top: 2rem;
  grid-area: content;
  justify-self: start;
}

/* media queries */

@media (max-width: 630px) {
  #log-in {
    display: none;
  }
}

@media (max-width: 975px) {
  header, footer {
    padding: 0 10px;
  }

  div.site-badge {
    min-width: 145px !important;
  }

  div.big-container, div.home-page-container {
    display: block;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
  }

  div#toc-collapse-btn {
    display: inline-block !important;
  }

  div.toc-container {
    position: absolute;
    width: 300px;
    display: none;
    top: 45px;
    left: 0;
  }

  div.site-badge img.logz-logo {
    display: none;
  }

  div.site-badge img.logz-symbol {
    display: inline !important;
  }
}

@media (max-width: 1210px) {
  nav.site-links {
    display: none;
  }

  nav.site-actions {
    padding: 0;
  }
}

@media (min-width: 1440px) {
  div.body-container {
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

/* ===== DOCS HOME CARDS ===== */

div.card-container a {
  margin: 10px;
}

div.cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

div.card {
  border: 1px solid #e1e1e1;
  border-radius: 6px;
  padding: 14px;
  margin: 0;
  width: 250px;
  text-align: center;
}

div.card:hover {
  border-color: #53585f;
}

div.full-card {
  height: 170px;
}

div.half-card {
  height: 50px;
  display: flex;
  align-items: center;
}

div.full-card div.card-text {
  display: block;
  padding: 0;
}

span.card-title {
  font-family: 'Titillium Web', sans-serif;
  font-weight: 600;
  color: #296386;
  margin: auto;
}

div.full-card span.card-title {
  margin-top: 14px;
}

div.card p {
  font-size: .85rem;
  line-height: 1.2rem;
  width: 85%;
  margin: auto;
  color: #53585f;
}

div.card-icon {
  display: block;
  margin: 14px auto;
  padding: 0;
}

div.card-icon i {
  width: 50;
  height: 50;
  vertical-align: middle;
}

div.card-icon i::before {
  color: #009cbd77;
  font-size: 30px;
  padding: 0;
  margin: 0;
}

/* ===== BASE STYLES ===== */

html {
  font-size: 16px;
}

body, .ui-accordion-content > *:not(h5):not(h6)  {
  font-family: 'Nunito Sans', sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.4rem;
  color: #53585f;
}

code, pre {
  font-family: "Source Code Pro", monospace;
  font-size: .8rem;
}

h1, h2, h3, h4, h5, h6, .site-title, .post-title {
  font-family: 'Titillium Web', sans-serif;
  font-weight: 400;
  padding: 0;
  color: #296386;
  margin-top: 3rem;
  margin-bottom: 1rem;
}

h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
  margin-top: 1rem;
}

h1, .post-title {
  font-size: 2rem;
  font-weight: 700;
}

h2 {
  font-size: 1.75rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.25rem;
}

h5, h6 {
  font-size: 1rem;
  font-weight: 700;
}

/* Use h6 to introduce procedures. If you need a regular heading, use h5 */
h6 { 
  color: #ff971c;
}

main.page-content img, main.page-content video {
  display: block;
  max-width: 80%;
  min-width: 400px;
  margin: 1.5rem auto;
  border: 1px solid #296386;
  border-radius: 2px;
}

ol img, ol video {
  margin-left: inherit !important;
}

img.no-border {
  border: none;
}

a, a:hover, .ui-accordion-content a {
  color: #009cbd;
  text-decoration: none;
}

svg.svg-inline--fa, i.li {
  /* add some breathing room to inline font awesome icons */
  margin-left: .1rem;
  margin-right: .1rem;
}

/* ===== CODE BLOCKS ===== */

code {
  color: #e53935;
}

div.highlighter-rouge {
  margin: 2rem auto;
}

div.highlighter-rouge, code {
  border: 1px solid #53585f1a;
  background-color: #53585f0a;
  padding: 1px 2px;
  margin-left: .1rem;
  margin-right: .1rem;
  border-radius: 2px;
}

div.highlighter-rouge code {
  background: none;
  border: none;
}

pre.highlight {
  margin: 0;
  padding: .5rem;
}

/* anchorjs icon */
.anchor-icon, .anchor-icon:hover {
  color: #f0f0f0;
}

/* ===== TABLES ===== */

table {
  border-collapse: collapse;
  border-spacing: 0;

  margin: 2rem auto;

  text-align: left;
}

td, th {
  padding: .25rem .75rem;
}

th {
  color: #296386;
}

td {
  border-bottom: 1px solid silver;
}


/* tablesorter styling */
th.tablesorter-header {
  min-width: 75px;
}

th.tablesorter-header:focus {
  outline: none;
}

.tablesorter-header-inner::after {
  font-family: "Font Awesome 5 Free";
  padding-left: 10px;
  color: #009cbd;
}

.tablesorter-headerAsc .tablesorter-header-inner::after {
  content: "\f0d7";
}

.tablesorter-headerDesc .tablesorter-header-inner::after {
  content: "\f0d8"
}


/* ===== LISTS ===== */

/* Alpha nested ordered lists */
ol ol {
  list-style-type: lower-alpha;
}

ol ul {
  list-style-type: disc;
}

/* horizontal lists */
ul.horizontal-list {
  list-style: none;
  padding: 0;
  margin: 0;
  height: 100%;
}

ul.horizontal-list li {
  display: inline;
}

/* normal def lists */
dl {
  display: grid;
  grid-template-columns: auto auto;
  grid-row-gap: 1rem;
  grid-column-gap: 1rem;
}

dt {
  font-weight: 700;
  grid-column: 1 / 2;
}

dd {
  grid-column: 2 / 3;
  margin-left: 0;
  float: left;
}

/* numbers for annotated images */
dl.letter-labels {
  counter-reset: letter-label;
}
/* ... */

